# modules

./: .gitignore  CMakeLists.txt
include/modules/: exception.hpp  modules.h  modules.hpp  modules_init.h  modules_manip.h
include/modules/component/: component.h  component_type.h
include/modules/component/details/: modules_component.h  modules_component_type.h
include/modules/component/details/manager/: modules_compmgr_init.h  modules_compmgr_manip.h
include/modules/component/manager/: component_manager_init.h  component_manager_manip.h
include/modules/defines/: export.h
include/modules/defines/export/: export.h
include/modules/defines/handle/: opaque_handle.h
include/modules/defines/opaque/: opaque.h
include/modules/details/: modules_init.h  modules_type.h
include/modules/interface/: modules.h
include/modules/modman/: modman.h  modman.hpp  modman_init.h  modman_manip.h  modman_module.hpp  modman_module_init.h  modman_module_manip.h  modman_traits.hpp
include/modules/modman/details/: modules_modman_init.h  modules_modman_manip.h  modules_modman_module_init.h  modules_modman_module_manip.h  modules_modman_type.h
include/modules/probe/: probe_init.h  probe_type.h
include/modules/probe/details/: probe_init.h  probe_manip.h  probe_type.h
include/modules/traits/: modman_component_interface.h  modman_interface.h  modman_traits.h
libs/x64/debug/: synapse-modules-component.idb  synapse-modules-component.lib  synapse-modules-debug.lib  synapse-modules-modman-cpp.idb  synapse-modules-modman-cpp.lib  synapse-modules-modman.idb  synapse-modules-modman.lib  synapse-modules-probe.idb  synapse-modules-probe.lib  synapse-modules.idb  synapse-modules.lib
project_files/vs2022/synapse-modules/: synapse-modules.sln
project_files/vs2022/synapse-modules/synapse-modules/: synapse-modules.vcxproj  synapse-modules.vcxproj.filters
project_files/vs2022/synapse-modules/synapse-modules-component/: synapse-modules-component.vcxproj  synapse-modules-component.vcxproj.filters
project_files/vs2022/synapse-modules/synapse-modules-component/x64/Debug/: synapse-modules-component.dll.recipe  synapse-modules-component.ilk  vc143.idb
project_files/vs2022/synapse-modules/synapse-modules-component/x64/Debug/synapse-.4eb82d15.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  synapse-modules-component.lastbuildstate  synapse-modules-component.write.1u.tlog
project_files/vs2022/synapse-modules/synapse-modules-cpp-dll/: synapse-modules-cpp-dll.vcxproj  synapse-modules-cpp-dll.vcxproj.filters
project_files/vs2022/synapse-modules/synapse-modules-cpp-dll/x64/Debug/synapse-.469d66aa.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
project_files/vs2022/synapse-modules/synapse-modules-dll/: synapse-modules-dll.vcxproj  synapse-modules-dll.vcxproj.filters
project_files/vs2022/synapse-modules/synapse-modules-dll/x64/Debug/: synapse-modules-dll.dll.recipe  synapse-modules-dll.ilk  vc143.idb
project_files/vs2022/synapse-modules/synapse-modules-dll/x64/Debug/synapse-.3f042794.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+1 more)
project_files/vs2022/synapse-modules/synapse-modules-include/: synapse-modules-include.vcxproj  synapse-modules-include.vcxproj.filters
project_files/vs2022/synapse-modules/synapse-modules-modman/: synapse-modules-modman.vcxproj  synapse-modules-modman.vcxproj.filters
project_files/vs2022/synapse-modules/synapse-modules-modman-cpp/: synapse-modules-modman-cpp.vcxproj  synapse-modules-modman-cpp.vcxproj.filters
project_files/vs2022/synapse-modules/synapse-modules-modman/x64/Debug/: synapse-modules-modman.dll.recipe  synapse-modules-modman.ilk  vc143.idb
project_files/vs2022/synapse-modules/synapse-modules-probe/: synapse-modules-probe.vcxproj  synapse-modules-probe.vcxproj.filters
project_files/vs2022/synapse-modules/x64/Debug/: synapse-modules-dll.exp  synapse-modules-dll.lib
source/: modules.c  modules.cpp  modules_manip.c
source/c/: CMakeLists.txt  details_probe_manip.c
source/c/details/: details_probe_init.c  details_probe_manip.c
source/component/: component.c
source/component/details/: modules_component.c
source/component/details/manager/: modules_compmgr_init.c  modules_compmgr_manip.c
source/component/manager/: component_manager_init.c  component_manager_manip.c
source/cpp/: CMakeLists.txt  modules.cpp
source/details/: details_modules_init.c
source/lib/: CMakeLists.txt  modules_init.c
source/lib/details/: details_modules_init.c  details_probe_init.c  details_probe_manip.c
source/modman/: modman.cpp  modman_init.c  modman_manip.c  modman_module.cpp  modman_module_init.c  modman_module_manip.c
source/modman/details/: modules_modman_init.c  modules_modman_manip.c  modules_modman_module_init.c  modules_modman_module_manip.c
source/probe/: probe_init.c
source/probe/details/: details_probe_init.c  details_probe_manip.c
source/shared_libs/: CMakeLists.txt  modules.c
(+28 files in other folders)
